--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = {version = "0.15.3" , feature = ["bevy_mesh_picking_backend"]}
+bevy = {version = "0.15.3" , features = []}
