--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 bevy = {version = "0.15.3" , features = []}
+serde = {version = "1.0.219", features = []}
+serde_json = "1.0.140"
